--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4083,6 +4083,7 @@ CONFIG_PSTORE_CONSOLE=y
 # CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_FTRACE=y
 CONFIG_PSTORE_RAM=y
+CONFIG_MSM_PRESERVE_MEM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 # CONFIG_F2FS_FS is not set
